k8s/kubectl/webserver-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  # type: NodePort
  type: ClusterIP
  ports:
    - port: 80
      # nodePort: 30000
      targetPort: 80
      protocol: TCP
  selector:
    app: webserver
