k8s/kubectl/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-api
spec:
  ingressClassName: nginx
  rules:
    - host: webserver.kit
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: webserver-api
                port:
                  number: 80
